--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,54 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" />
+
+
+.custom-dropdown-menu {
+     background-color: #60a5fa; /* Tailwind's blue-400 color */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+  
+  /* styles.css or your global CSS file */
+.cursor-animation {
+  display: inline-block;
+  animation: blink 2s step-start infinite;
 }
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+}
+.carousel-container {
+  position: relative;
+  height: 70vh; /* 70% of the viewport height */
+  overflow: hidden;
+}
+
+.carousel-image {
+  position: absolute;
+  bottom: 0; /* Position the image at the bottom */
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* Cover the entire container */
+  opacity: 0;
+  transition: opacity 2s ease-in-out; /* Smooth transition */
+}
+
+.carousel-image.active {
+  opacity: 1;
+}
+
+.position-absolute {
+  top: 50%; /* Center the content vertically */
+  transform: translateY(-50%); /* Adjust centering */
+}
+
